// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultStatsFilters should render children when stats filters are not the default stats filters 1`] = `
<div>
  Foo bar
</div>
`;

exports[`DefaultStatsFilters should render the fallback when stats filters are the default stats filters 1`] = `
<div>
  fallback
</div>
`;

exports[`DefaultStatsFilters should reset the filters on unmount 1`] = `
[
  {
    "payload": {
      "period": {
        "end_datetime": "2021-02-03T23:59:59.999Z",
        "start_datetime": "2021-02-03T00:00:00.000Z",
      },
    },
    "type": "stats/setStatsFiltersWithLogicalOperators",
  },
  {
    "payload": undefined,
    "type": "stats/resetStatsFilters",
  },
]
`;

exports[`DefaultStatsFilters should set the default filters on mount 1`] = `
[
  {
    "payload": {
      "period": {
        "end_datetime": "2021-02-03T23:59:59.999Z",
        "start_datetime": "2021-02-03T00:00:00.000Z",
      },
    },
    "type": "stats/setStatsFiltersWithLogicalOperators",
  },
]
`;

exports[`DefaultStatsFilters should set the default period using user timezone  1`] = `
[
  {
    "payload": {
      "period": {
        "end_datetime": "2021-02-03T23:59:59.999Z",
        "start_datetime": "2021-02-03T00:00:00.000Z",
      },
    },
    "type": "stats/setStatsFiltersWithLogicalOperators",
  },
]
`;
